[gd_scene load_steps=2 format=3 uid="uid://liwg6fdq6hr5"]

[ext_resource type="Script" uid="uid://djm0juifqg77k" path="res://source/rules/interface/items/rule_range_int_node.gd" id="1_vf83b"]

[node name="RuleRangeInt" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_vf83b")

[node name="Container" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="RuleContainer" type="HBoxContainer" parent="Container"]
layout_mode = 2

[node name="FromLabel" type="Label" parent="Container/RuleContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "From "

[node name="FromSpinBox" type="SpinBox" parent="Container/RuleContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_greater = true
allow_lesser = true
alignment = 1

[node name="ToLabel" type="Label" parent="Container/RuleContainer"]
unique_name_in_owner = true
layout_mode = 2
text = " to "

[node name="ToSpinBox" type="SpinBox" parent="Container/RuleContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_greater = true
allow_lesser = true
alignment = 1
